updated api contract for block and sentence update. Code too has changed
